Update footer content in index.html

--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
         </section>
 
         <footer class="footnote">
-          <p>页面生成时间：<span id="generated-time"></span> · 由 ChatGPT 自动生成</p>
-          <p>背景图片：请将你希望的背景图命名为 <code>java.jpg</code> 并放在同一目录，即可自动替换。</p>
+          <p>@：by：一泽：<span id="generated-time"></span> · 
+          <p>
         </footer>
 
       </article>
